# SeriStruct

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md
src/idl/: README.md  ssgen.py
src/lib/: CMakeLists.txt  SeriStruct.cpp  SeriStruct.hpp
src/tests/: CMakeLists.txt  GenRecords.txt  tests.cpp  tests_arr_opt.cpp  tests_gen.cpp  tests_mut.cpp  tests_static.cpp  tests_string.cpp
